Contact Management in profile view Ended
`## Contact Management in profile view Ended `
- `**the functionalities added to profile view were:**`
    - Add new contact y modal addContact.
    - List the current user contacts in the modal ContactList.
-`**A new view was added to HeroViews directory**` `*(_ContacData)*`
-`**A new JavaScript file was added to wwwroot\js directory**`  `*(profileMb.js)*`
@MoOree03 Was the revisor in the development

Co-Authored-By: Miguel Angel Moreno Beltran <82951836+MoOree03@users.noreply.github.com>

--- a/HomeHero/Views/HeroViews/ApplyRequest.cshtml
+++ b/HomeHero/Views/HeroViews/ApplyRequest.cshtml
@@ -1,7 +1,7 @@
 @{
     ViewData["Title"] = "ApplyRequest";
 }
-
+@section scripts{}
 @section ApplyRequest_Logo{
         <a class="img-container" asp-area="" asp-controller="Home" asp-action="Index"><img class="img-fluid" src="~/Images/mainIcon.png" /></a>
 }
