--- a/HomeHero/Views/HeroViews/RecoverChangePW.cshtml
+++ b/HomeHero/Views/HeroViews/RecoverChangePW.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Recuperacion";
 }
-
+@section scripts{}
 @section Main{
     <section class="darkMain">
         <div class="container text-white">
