--- a/HomeHero/Views/HeroViews/SignUp.cshtml
+++ b/HomeHero/Views/HeroViews/SignUp.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Registarse";
 }
+@section scripts{}
 @section logo{
     <a class=" img-container " asp-area="" asp-controller="Home" asp-action="Index"><img class="img-fluid" src="~/Images/mainIcon.png" /></a>
 }
