--- a/HomeHero/Views/HeroViews/AskHelp.cshtml
+++ b/HomeHero/Views/HeroViews/AskHelp.cshtml
@@ -1,10 +1,8 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿
 @{
     ViewData["Title"] = "Pedir Ayuda";
 }
-
+@section scripts{}
 @section logo{
     <a class=" img-container2" asp-area="" asp-controller="Home" asp-action="Index"><img class="img-fluid" src="~/Images/iconSol.png" /></a>
 }
