--- a/HomeHero/Views/HeroViews/profileMb.cshtml
+++ b/HomeHero/Views/HeroViews/profileMb.cshtml
@@ -2,7 +2,9 @@
 @{
     ViewData["Title"] = "Mi Perfil";
 }
-
+@section scripts{
+    <script src="~/js/profileMb.js"></script>
+}
 @section logo{
     <a class=" img-container2" asp-area="" asp-controller="Home" asp-action="Index"><img class="img-fluid" src="~/Images/iconSol.png" /></a>
 }
@@ -15,7 +17,7 @@
     <section>
         <div class="container-fluid text-white">
             <div class="row d-flex justify-content-evenly align-items-start p-4 mt-3">
-               <div class="col-6 p-2 thirdBg">
+               <div class="col-lg-6 col-sm-12 p-2 thirdBg">
                     <div class="row d-flex justify-content-between p-2 m-auto" style="width: 100%;">
                         @if (ViewBag.modifyProfile == false)
                         {
@@ -64,14 +66,17 @@
                                         <option value="4">Prefiero no responder</option>
                                     </select>
                                 </div>
-                                <div class="form-group p-3 pt-0 d-flex justify-content-around">
+                                <div class="form-group p-3 pt-0 d-flex justify-content-start">
                                     <label for="curriculum" class="control-label pb-1 btn btn-outline-light">
                                          Curriculum
                                         <i class="fa-solid fa-upload"></i>
                                     </label>
                                     <input type="file" id="curriculum" name="curriculum" class="form-control" style="display: none;" />
-                                    <button type="button" class="btn btn-outline-light" data-toggle="modal" data-target="#ContactList">Ver mis numeros registrados</button>
-                                    <button type="button" class="btn btn-outline-light " data-toggle="modal" data-target="#ContactList">Crear nuevo Nro. Contacto</button>
+                                    <h6 class="secColor mt-2 ms-3" id="fileNameLabel"></h6>
+                                </div>
+                                <div class="form-group p-3 pt-0 d-flex justify-content-start">
+                                    <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#ContactList" id="ContactsList">Ver mis numeros registrados</button>
+                                    <button type="button" class="btn btn-outline-light ms-3" data-bs-toggle="modal" data-bs-target="#addContact">Crear nuevo Nro. Contacto</button>
                                 </div>
                                 <div class="form-group p-3 pt-0 text-center ">
                                     <button type="submit" class="btn btn-primary mt-2 fs-5">REGISTRARSE</button>
@@ -80,10 +85,44 @@
                         }
         </div>
                </div>
-                <div class="col-5 p-4 fourthBg reqProfile">
+                <div class="col-lg-5 col-sm-12 mt-lg-0 mt-sm-3 p-4 fourthBg reqProfile">
                     <h3 class="font-title text-center">Mis Solicitudes</h3>
                 </div>
             </div>
         </div>
     </section>
+
+    <!-- Modal -->
+    <div class="modal fade" id="ContactList" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content fourthBg text-white">
+                <div class="modal-header">
+                    <h5 class="modal-title">Tus Contactos Agregados</h5>
+                    <button type="button" class="btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body" id="contact-body">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal -->
+    <div class="modal fade" id="addContact" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content fourthBg text-white">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Crear Contacto</h5>
+                    <button type="button" class="btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form asp-controller="Home" asp-action="addContact" method="post">
+                        <div class="form-group p-3 pt-0">
+                            <label for="contactNum" class="control-label">Numero de Telefono</label>
+                            <input type="number" id="contactNum" name="contactNum" class="form-control" />
+                        </div>
+                        <button type="submit" class="btn btn-outline-light p-2 ps-4 pe-4 m-auto" data-bs-dismiss="modal">Crear</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 }
