--- a/HomeHero/Views/Home/Index.cshtml
+++ b/HomeHero/Views/Home/Index.cshtml
@@ -5,6 +5,7 @@
 @section logo{
     <a class=" img-container " asp-area="" asp-controller="Home" asp-action="Index"><img class="img-fluid" src="~/Images/mainIcon.png" /></a>
 }
+@section scripts{}
 @section inicioLI{
     <li class="nav-item logIn ">
         <a class="nav-link " asp-area="" asp-controller="Home" asp-action="LogIn">Iniciar Sesion</a>
