--- a/HomeHero/wwwroot/css/General.css
+++ b/HomeHero/wwwroot/css/General.css
@@ -62,7 +62,7 @@
 }
 .darkMain {
     margin: 0;
-    padding: 0;
+    padding: 5%;
     background-color: rgb(34, 31, 31, 0.85);
     height: 88vh;
 }
@@ -95,7 +95,7 @@
 }
 
 .flex-column {
-    height:480px;
+    height:max-content;
     border-radius: 4px;
     background: rgb(69, 61, 61, 0.80);
 }
@@ -134,13 +134,9 @@ user-img:hover {
     cursor: pointer;
 }
 
-@media screen and (max-width: 768px) {
-    .darkMain {
-        height: 100%;
-        padding: 5%;
-    }
+@media screen and (min-width: 1750px) {
 
     .flex-column {
-        height: auto;
+        height: max-content;
     }
 }
