--- a/HomeHero/Views/HeroViews/Login.cshtml
+++ b/HomeHero/Views/HeroViews/Login.cshtml
@@ -4,7 +4,7 @@
 @section logo{
     <a class=" img-container " asp-area="" asp-controller="Home" asp-action="Index"><img class="img-fluid" src="~/Images/mainIcon.png" /></a>
 }
-@section scripts{}
+
 @section inicioLI{}
 
 @section Main{
@@ -43,4 +43,48 @@
 
         </div>
     </section>
+}
+@section scripts {
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $("form").validate({
+                rules: {
+                    email: {
+                        required: true,
+                        email: true
+                    },
+                    password: {
+                        required: true,
+                        minlength: 8
+                    }
+                },
+                messages: {
+                    email: {
+                        required: "Por favor, introduce tu correo electrónico.",
+                        email: "Por favor, introduce un correo electrónico válido."
+                    },
+                    password: {
+                        required: "Por favor, introduce tu contraseña.",
+                        minlength: "La contraseña debe tener al menos 8 caracteres."
+                    }
+                },
+                submitHandler: function (form) {
+                    $.ajax({
+                        type: 'POST',
+                        url: '/Home/LogInAction',
+                        data: $(form).serialize(),
+                        success: function (response) {
+                            
+                        },
+                        error: function (xhr, status, error) {
+                          
+                        }
+                    });
+                    return false; 
+                }
+            });
+        });
+    </script>
 }
