Add Search Request

--- a/HomeHero/Views/HeroViews/Principal.cshtml
+++ b/HomeHero/Views/HeroViews/Principal.cshtml
@@ -31,7 +31,7 @@
                        <img class="img-fluid" src="~/Images/AskForHelp.png"/>
                    </div>
                 </div>
-                <div onclick="location.href='@Url.Action("Privacy", "Home")'" class="col-lg-3 col-md-5 col-sm-10 p-5 mt-5 text-center d-flex flex-column">
+                <div onclick="location.href='@Url.Action("RequestList", "Home")'" class="col-lg-3 col-md-5 col-sm-10 p-5 mt-5 text-center d-flex flex-column">
                     <h2 class="font-title pb-3">Buscar Solicitudes</h2>
                     <div class="flex-grow-1">
                         <img class="img-fluid" src="~/Images/SearchRequest.png" />
