--- a/HomeHero/wwwroot/css/General.css
+++ b/HomeHero/wwwroot/css/General.css
@@ -133,7 +133,40 @@
 user-img:hover {
     cursor: pointer;
 }
+.filter-form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
 
+.filter-input {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-right: 10px;
+    font-size: 16px;
+}
+
+.filter-button {
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: #4CAF50;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+    .filter-button:hover {
+        background-color: #3e8e41;
+    }
+
+    .filter-button:active {
+        background-color: #3e8e41;
+        box-shadow: 0 5px #666;
+        transform: translateY(4px);
+    }
 @media screen and (min-width: 1750px) {
 
     .flex-column {
