--- a/HomeHero/Views/HeroViews/AskHelp.cshtml
+++ b/HomeHero/Views/HeroViews/AskHelp.cshtml
@@ -2,11 +2,16 @@
 @{
     ViewData["Title"] = "Pedir Ayuda";
 }
-@section scripts{}
+@section scripts{
+    <script src="~/js/request.js"></script>
+}
 @section logo{
     <a class=" img-container2" asp-area="" asp-controller="Home" asp-action="Index"><img class="img-fluid" src="~/Images/iconSol.png" /></a>
 }
 @section inicioLI{
+    <li class="nav-item menuColor">
+        <a class="nav-link " asp-area="" asp-controller="Home" asp-action="principalMb">Menu</a>
+    </li>
     <li class="nav-item logIn ">
         <a class="nav-link " asp-area="" asp-controller="Home" asp-action="ProfileMb">Mi perfil</a>
     </li>
@@ -23,20 +28,21 @@
                     <div class="col-lg-5">
                         <div class="form-group pb-3">
                             <label for="title" class="control-label pb-1">Titulo de la solicitud</label>
-                            <input type="text" id="title" name="title" class="form-control" />
+                            <input type="text" id="title" name="title" class="form-control" required maxlength="60" />
                         </div>
                         <div class="form-group pb-3">
                             <label for="desc" class="control-label pb-1">
                                 ¿De qué trata tu solicitud? Escribe aquí una descripción.
                             </label>
-                            <textarea type="text" id="desc" name="desc" class="form-control"></textarea>
+                            <textarea type="text" id="desc" name="desc" class="form-control" required maxlength="800"></textarea>
                         </div>
-                        <div class="form-group pb-3">
-                            <label for="image" class="control-label pb-1 btn btn-outline-light">
+                        <div class="form-group pb-3 d-flex justify-content-start">
+                            <label for="fileID" class="control-label pb-1 btn btn-outline-light">
                                 Sube una imagen
                                 <i class="fa-solid fa-upload"></i>
                             </label>
-                            <input type="file" id="image" name="image" class="form-control" style="display: none;" />
+                            <input type="file" id="fileID" name="image" class="form-control" style="display: none;" accept=".jpg,.png" />
+                            <h6 class="secColor mt-2 ms-3" id="fileNameLabel">
                         </div>
                     </div>
                     <div class="col-lg-5">
@@ -50,12 +56,12 @@
                             </select>
                         </div>
                         <div class="form-group pb-3">
-                            <label for="dateReq" class="control-label pb-1">Vigencia de la solicitud</label>
+                            <label for="dateReq" class="control-label pb-1">Fecha maxima en que puede ser respondida la solicitud</label>
                             <input type="date" id="dateReq" name="dateReq" class="form-control" />
                         </div>
                         <div class="form-group pb-3">
                             <label for="cantMb" class="control-label pb-1">Cantidad de personas necesarias</label>
-                            <input type="number" id="cantMb" name="cantMb" class="form-control" />
+                            <input required value="1" min="1" type="number" id="cantMb" name="cantMb" class="form-control" />
                         </div>
                         <button type="submit" class="btn btn-primary mt-2 fs-5">CREAR LA SOLICITUD</button>
                     </div>
