--- a/HomeHero/Views/HeroViews/_profileUpdate.cshtml
+++ b/HomeHero/Views/HeroViews/_profileUpdate.cshtml
@@ -4,16 +4,16 @@
     {
         <div class="form-group p-3 pt-0">
             <label for="name" class="control-label">NOMBRE(S)</label>
-            <input required type="text" minlength="3" id="name" name="name" class="form-control" value="@ViewBag.user.NamesUser" />
+            <input required type="text" minlength="3" maxlength="20" id="name" name="name" class="form-control" value="@ViewBag.user.NamesUser" />
         </div>
     }
     <div class="form-group p-3 pt-0">
         <label for="surnames" class="control-label">APELLIDO(S)</label>
-        <input required type="text" id="surnames" name="surnames" class="form-control" value="@ViewBag.user.SurnamesUser" />
+        <input required type="text" id="surnames" maxlength="20" name="surnames" class="form-control" value="@ViewBag.user.SurnamesUser" />
     </div>
     <div class="form-group p-3 pt-0">
         <label for="email" class="control-label">CORREO</label>
-        <input type="email" id="email" name="email" class="form-control" value="@ViewBag.user.Email" />
+        <input required type="email" id="email" name="email" class="form-control" value="@ViewBag.user.Email" />
     </div>
     <div class="form-group p-3 pt-0">
         <label for="idReal" class="control-label">DNI (CC - TI - OTRO)</label>
@@ -55,11 +55,11 @@
         </select>
     </div>
     <div class="form-group p-3 pt-0 d-flex justify-content-start">
-        <label for="curriculum" class="control-label pb-1 btn btn-outline-light">
+        <label for="fileID" class="control-label pb-1 btn btn-outline-light">
             Curriculum
             <i class="fa-solid fa-file-circle-plus"></i>
         </label>
-        <input accept="application/pdf" type="file" id="curriculum" name="curriculum" class="form-control" style="display: none;" @if (ViewBag.Curriculum != null)
+        <input accept="application/pdf" type="file" id="fileID" name="curriculum" class="form-control" style="display: none;" @if (ViewBag.Curriculum != null)
         {
             <text> value="@ViewBag.Curriculum"</text>
         } />
