--- a/HomeHero/wwwroot/css/General.css
+++ b/HomeHero/wwwroot/css/General.css
@@ -47,6 +47,10 @@
     margin-right: 1em;
 }
 
+.menuColor {
+    background: #3e8e41;
+    margin-right: 2em;
+}
 
 .nav-custom li {
     font-family: 'Dosis', sans-serif;
@@ -66,8 +70,6 @@
     background-color: rgb(34, 31, 31, 0.85);
     height: 88vh;
 }
-
-
 
 .title-page{
    font-size:3em;
@@ -167,8 +169,22 @@ user-img:hover {
         box-shadow: 0 5px #666;
         transform: translateY(4px);
     }
-@media screen and (min-width: 1750px) {
 
+.reqCard{
+    cursor:pointer;
+}
+.reqCard h5{
+    height:75px;
+}
+
+    .reqCard:hover {
+        background: #0b294deb;
+        transform: scale(1.005);
+        transition: transform 0.3s;
+        box-shadow: 0 0 4px 1px #08192e9c;
+    }
+
+@media screen and (min-width: 1750px) {
     .flex-column {
         height: max-content;
     }
